--- a/css/styles.css
+++ b/css/styles.css
@@ -2389,10 +2389,7 @@ nav ul ul li.last-item > a {
   height: auto;
 }
 
-.main-content .banner-content .left-banner:hover img {
-  -webkit-transform: scale(1.3);
-  transform: scale(1.3);
-}
+
 
 .main-content .banner-content .left-banner img {
   max-width: 100%;
@@ -2470,6 +2467,7 @@ nav ul ul li.last-item > a {
   cursor: pointer;
 }
 
+
 .main-content .banner-content .right-banner .top-banner:hover img {
   -webkit-transform: scale(1.3);
   transform: scale(1.3);
@@ -2482,46 +2480,19 @@ nav ul ul li.last-item > a {
 }
 
 .main-content .banner-content .right-banner .top-banner h3 {
-  position: absolute;
-  top: 29%;
-  right: 17%;
-  color: #fff;
-  font-size: 34px;
-  letter-spacing: 0.3em;
+  font-size: 28px;
   text-transform: uppercase;
   z-index: 700;
 }
 
 .main-content .banner-content .right-banner .top-banner p {
-  position: absolute;
-  top: 54%;
-  right: 25%;
-  color: #fff;
-  font-size: 14px;
-  letter-spacing: 0.4em;
   text-transform: uppercase;
-  z-index: 700;
+line-height: 15px;
+  letter-spacing: 0.2px;
 }
 
-.main-content .banner-content .right-banner .top-banner p:after {
-  content: '';
-  display: inline-block;
-  width: 10px;
-  height: 1px;
-  background: #fff;
-  margin-left: 5px;
-  margin-bottom: 5px;
-}
 
-.main-content .banner-content .right-banner .top-banner p:before {
-  content: '';
-  display: inline-block;
-  width: 10px;
-  height: 1px;
-  background: #fff;
-  margin-right: 10px;
-  margin-bottom: 5px;
-}
+
 
 .main-content .banner-content .right-banner .top-banner .watches img {
   max-width: 100%;
@@ -2900,36 +2871,7 @@ nav ul ul li.last-item > a {
   height: auto;
 }
 
-.img-eff:before {
-  background: rgba(0, 0, 0, 0.5);
-  width: 100%;
-  height: 100%;
-  content: '';
-  position: absolute;
-  left: -120%;
-  top: 40%;
-  z-index: 400;
-  transition: all 0.35s linear;
-  -webkit-transition: all 0.35s linear;
-  -moz-transition: all 0.35s linear;
-  transform: rotate(-90deg);
-  -webkit-transform: rotate(-90deg);
-  transform: scale(0);
-  transition-property: transform;
-  transition-duration: 0.3s;
-  transition-timing-function: ease-out;
-}
 
-.img-eff:hover:before {
-  top: 0;
-  left: 0;
-  transform: rotate(0deg);
-  -webkit-transform: rotate(0deg);
-  transform: scale(2.3);
-  transition-property: transform;
-  transition-duration: 1s;
-  transition-timing-function: ease-out;
-}
 
 /* 1.6 Footer  */
 footer {
@@ -4947,6 +4889,9 @@ footer .copyright ul li img {
   margin-left: 8px;
   margin-top: 15px;
 }
+.slider-top{
+    text-transform: uppercase!important;
+}
 
 .section-content .section-left .slider-titel .item a {
   display: inline-block;
@@ -6081,6 +6026,12 @@ footer .copyright ul li img {
   /* Zebra striping */
 }
 
+.main-content .item{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 50px;
+}
 .main-content .product-name .table-responsive table {
   margin-top: 60px;
   width: 100%;
