--- a/css/styles.css
+++ b/css/styles.css
@@ -46,6 +46,7 @@
 /*  1.1 Base  */
 html, body {
   height: 100%;
+  scroll-behavior: smooth;
 }
 
 html {
@@ -2486,12 +2487,23 @@ nav ul ul li.last-item > a {
 }
 
 .main-content .banner-content .right-banner .top-banner p {
-  text-transform: uppercase;
-line-height: 15px;
+  text-align: left;
+line-height: 20px;
   letter-spacing: 0.2px;
+  font-size: 20px;
+  margin-top: 20px;
+}
+.main-content .banner-content .right-banner .top-banner li{
+  text-align: left;
+  letter-spacing: 0.2px;
+  font-size: 16px;
+  margin-top: 8px;
 }
 
-
+.main-content .banner-content .right-banner .top-banner h4{
+  font-size: 22px;
+  margin-top: 25px;
+}
 
 
 .main-content .banner-content .right-banner .top-banner .watches img {
@@ -2559,6 +2571,16 @@ line-height: 15px;
   background: #fff;
   margin-right: 10px;
   margin-bottom: 5px;
+}
+.main-content h3 {
+  text-align: center;
+  font-size: 28px;
+  text-transform: uppercase;
+  z-index: 700;
+
+}
+.main-content .contact{
+  margin-top: 30px;
 }
 
 @media (max-width: 1199px) {
@@ -4778,6 +4800,7 @@ footer .copyright ul li img {
 
 .contact-page {
   margin-top: 60px;
+
 }
 
 .contact-page h3 {
@@ -4794,7 +4817,11 @@ footer .copyright ul li img {
   margin-right: 7px;
   font-weight: 300;
 }
-
+.contact-page .tel-email{
+  line-height: 33px;
+  font-size: 22px;
+  color: #333;
+}
 .contact-page p {
   font-size: 14px;
   color: #333;
